# PythonProject_10.1_test_2

./: pyproject.toml
src/: main.py
