[project]
name = "pythonproject-10-1-test-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Polina Voropay",email = "voropaypa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "pythonproject_10"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
